src/test/deca/context/invalid/ContextSansObjet/Identification/IdentificationFloatAssignString.deca
//Description :
//	affectation d'un string à une variable définie comme float
//
//Résultats :
//	Erreur contextuelle
//	Ligne 10 : type incompatible <10, 6>

{
	float x="Hello";
}